objects/Child_1__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent 1</label>
        <referenceTo>Parent_1__c</referenceTo>
        <relationshipLabel>Child 1s</relationshipLabel>
        <relationshipName>Child_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_1__c</fullName>
        <externalId>true</externalId>
        <label>Text 1</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Text_field__c</fullName>
        <label>Text field</label>
        <length>98</length>
        <type>Text</type>
    </fields>
    <label>Child 1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lookup__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Text_1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Child 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child 1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>